# MindVoice

./: .gitignore  README.md
.github/workflows/: android-build.yml  docker-build.yml  pytest.yml
bci_app_android/: README.md  key.jks  settings.gradle.kts
bci_app_android/app/: build.gradle.kts
bci_app_android/app/src/androidTest/java/com/example/bciproject/: ExampleInstrumentedTest.kt
bci_app_android/app/src/main/: AndroidManifest.xml
bci_app_android/app/src/main/assets/: classify.json  help_me.json  model.pt
bci_app_android/app/src/main/java/com/example/bciproject/adaptor/: DevicesAdapter.kt  EEGAdapter.kt  LoginAdapter.kt  MindVoiceAdapter.kt  ProfileAdapter.kt  RegisterAdapter.kt
bci_app_android/app/src/main/java/com/example/bciproject/apisetting/: EEGInterface.kt  EEGRetrofitManager.kt  LoginInterface.kt  LoginRetrofitManager.kt  MindVoiceInterface.kt  MindVoiceRetrofitManager.kt  RegisterInterface.kt  RegisterRetrofitManager.kt
bci_app_android/app/src/main/java/com/example/bciproject/model/: EEGCallModel.kt  EEGCallbackModel.kt  LoginCallModel.kt  LoginCallbackModel.kt  RegisterCallModel.kt  RegisterCallbackModel.kt
bci_app_android/app/src/main/java/com/example/bciproject/ui/: DevicesActivity.kt  EEGActivity.kt  LoginActivity.kt  MindVoiceActivity.kt  ProfileActivity.kt  RegisterActivity.kt
bci_app_android/app/src/main/java/com/example/bciproject/util/: AlertDialogHelper.kt  ProgressionBar.kt
bci_app_android/app/src/main/res/drawable/: button_background.xml  image_clickable.xml  rounded_corners.xml  rounded_corners_top.xml
bci_app_android/app/src/main/res/layout/: activity_devices.xml  activity_eeg.xml  activity_login.xml  activity_mindvoice.xml  activity_profile.xml  activity_register.xml  progression_layout.xml
bci_app_android/app/src/main/res/menu/: popup_menu.xml
bci_app_android/app/src/main/res/navigation/: nav_graph.xml
bci_app_android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
bci_app_android/app/src/main/res/values-night/: themes.xml
bci_app_android/app/src/main/res/values-v23/: themes.xml
bci_app_android/app/src/test/java/com/example/bciproject/: ExampleUnitTest.kt
bci_app_android/gradle/wrapper/: gradle-wrapper.properties
bci_backend/: .dockerignore  Dockerfile  README.md  bci_backend.py  db.sqlite3  extract_test_data.py  pyproject.toml  requirements.txt
bci_backend/analyzeapp/: api.py  apps.py  controllers.py  extractDataFromRaw.py  hello.json  models.py  newEncoder.py  stop.json  tests.py  urls.py  views.py  yes.json
bci_backend/analyzeapp/migrations/: 0001_initial.py  0002_userfeedback.py
bci_backend/bciBackend/: asgi.py  settings.py  urls.py  wsgi.py
bci_backend/config/: settings.py  urls.py
bci_backend/model/: README.md  autoencoder_1.py  autoencoder_2.py  cog.yaml  eeg_autoencoder_classifier.py  newEncoder.py  predict.py
bci_backend/tests/: test_analyze_endpoint.py  test_health_endpoint.py  test_save_usage.py  test_send_email_endpoint.py  test_user_credential.py  test_user_feedback.py  thank_you.json
bci_backend/tests/test_data/: 0-1.json  0-10.json  0-100.json  0-101.json  0-102.json  0-103.json  0-104.json  0-105.json  0-106.json  0-107.json  0-108.json  0-109.json  0-11.json  0-110.json  0-111.json  0-112.json  0-113.json  0-114.json  0-115.json  0-116.json  0-117.json  0-118.json  0-119.json  0-12.json  0-120.json  0-121.json  0-122.json  0-123.json  0-124.json  0-125.json  0-126.json  0-127.json  0-128.json  0-129.json  0-13.json  0-130.json  0-131.json  0-132.json  0-133.json  0-134.json  (+710 more)
bci_ml/: 2. BCI EEG Classification.ipynb  README.md  bci_ml.py  pyproject.toml
bci_ml/model/: autoencoder_2.py
