[tool.poetry]
name = "bci-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.0.2"
torch = [
    { version = "^2.0.0", source = "pytorch", platform = "!=darwin"},
    { version = "^2.0.0", source = "pypi", platform = "darwin"},
]
numpy = "^1.26.4"
einops = "^0.7.0"
pandas = "^2.2.1"
flask = "^3.0.2"
opentelemetry-sdk = "^1.23.0"
opentelemetry-instrumentation-django = "^0.44b0"
requests = "^2.31.0"
opentelemetry-instrumentation = "^0.44b0"
opentelemetry-api = "^1.23.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.23.0"
opentelemetry-exporter-jaeger = "^1.21.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
