[tool.poetry]
name = "bci-ml"
version = "0.1.0"
description = ""
authors = [
    "Jun-En Ding <jding17@stevens.edu>",
    "Dr. Zhongyuan Yu <zyu7@stevens.edu>",
    "Fanyi Zhao <fzhao12@stevens.edu>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
transformers = "*"
accelerate = "*"
einops = "*"
langchain = "*"
xformers = "*"
bitsandbytes = "*"
faiss-gpu = "*"
sentence_transformers = "*"
torch = [
    { version = "^2.0.0", source = "pytorch", platform = "!=darwin"},
    { version = "^2.0.0", source = "pypi", platform = "darwin"},
]
poetry-jupyter-plugin = "^0.1.4"
ipykernel = "^6.27.1"
bs4 = "^0.0.1"
pandas = "^2.2.0"
numpy = "^1.26.4"
skorch = "^0.15.0"
matplotlib = "^3.8.3"
torchvision = "^0.17.0"
seaborn = "^0.13.2"
optuna = "^3.5.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
